plugins {
    id 'java'
    id 'idea'
    id 'eclipse'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[7.0.23,8.0)'
    id 'net.minecraftforge.jarjar' version '0.2.3'
}

java {
    withSourcesJar()
}

repositories {
    maven {
        url = uri("https://cursemaven.com")
    }
}

String umcVersion = "1.3.1"
if (!"release".equalsIgnoreCase(System.getProperty("target"))) {
    try {
        umcVersion += "-${(providers.exec { commandLine("git", "rev-parse", "--verify", "--short=7", "HEAD") }.standardOutput.asText.get() as String).substring(0, 7)}"
    } catch (Exception ignored) {
        umcVersion += "-unknown"
    }
}
version = "1.21.1-forge-" + umcVersion
group = "cam72cam.universalmodcore" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
base.archivesName = "UniversalModCore"

println("version: ${version}")

java.toolchain.languageVersion = JavaLanguageVersion.of(21)
println("Java: ${providers.systemProperty("java.version").get()}, " +
        "JVM: ${providers.systemProperty("java.vm.version").get()} (${providers.systemProperty("java.vendor").get()}), " +
        "Arch: ${providers.systemProperty("os.arch").get()}")

minecraft {
    mappings channel: "official", version: "1.21.1"
    accessTransformer = true

    runs {
        // applies to all the run configs below
        configureEach {
            workingDir.convention layout.projectDirectory.dir('runs')
            // Mixin requires either specifying the config via command line, or in the Manifest
            args "--mixin.config=mixins.feat.universalmodcore.json", "--mixin.config=mixins.fix.universalmodcore.json"

            systemProperty "mixin.debug.verbose", "true"
            systemProperty "mixin.debug.export", "true"
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            systemProperty 'forge.logging.console.level', 'debug'
        }

        register('client') {
            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'forge.enabledGameTestNamespaces', 'universalmodcore'
        }

        register('server') {
            systemProperty 'forge.enabledGameTestNamespaces', 'universalmodcore'
            args '--nogui'
        }

        register('data') {
            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // workingDirectory project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            args '--mod', 'universalmodcore', '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
    }
}

sourceSets.main.resources { srcDir layout.projectDirectory.dir('src/generated/resources') }

// This methods registers jarJar for the default jar task.
// The closure allows you to configure the task, instead of needing to do this:
// tasks.named('jarJar', net.minecraftforge.jarjar.gradle.JarJar)
jarJar.register() {
    archiveClassifier = null
}

repositories {
    minecraft.mavenizer(it)
    maven fg.forgeMaven
    maven fg.minecraftLibsMaven
    exclusiveContent {
        forRepository {
            maven {
                name = 'Sponge'
                url = 'https://repo.spongepowered.org/repository/maven-public'
            }
        }
        filter {
            includeGroupAndSubgroups('org.spongepowered')
        }
    }
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation minecraft.dependency("net.minecraftforge:forge:1.21.1-52.1.14")
    // you may put jars on which you depend on in ./libs
    // or you may define them like so..
    //compile "some.group:artifact:version:classifier"
    //compile "some.group:artifact:version"

    // real examples
    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env

    // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
    //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'

    // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
    // except that these dependencies get remapped to your current MCP mappings
    //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
    //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'

    // for more info...
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html
    compileOnly(annotationProcessor('io.github.llamalad7:mixinextras-common:0.5.0'))
    implementation(jarJar('io.github.llamalad7:mixinextras-forge:0.5.0')) {
        jarJar.configure(it) {
            module {
                group = 'io.github.llamalad7'
                name = 'mixinextras'
            }
            range = "[0.5.0,)"
        }
    }

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'

    implementation(jarJar('javax.vecmath:vecmath:1.5.2')) {
        jarJar.configure(it) {
            module {
                group = 'javax.vecmath'
                name = 'vecmath'
            }
            range = "[1.5.2,)"
        }
    }
}

repositories {
    maven {
        //LDL
        name = "Gegy"
        url = uri("https://maven.gegy.dev")
    }
}

var mappingsAttribute = Attribute.of("net.minecraft.mappings", String.class)

dependencies {
    attributesSchema {
        attribute(mappingsAttribute)
    }
}

jar {
    archiveClassifier = 'slim'
    manifest {
        attributes([
            "Specification-Title": "universalmodcore",
            "Specification-Vendor": "",
            "Specification-Version": "1", // We are version 1 of ourselves
            "Implementation-Title": project.name,
            "Implementation-Version": umcVersion,
            "Implementation-Vendor" :"",
            "MixinConfigs" : "mixins.feat.universalmodcore.json,mixins.fix.universalmodcore.json"
        ])
    }
}

test {
    useJUnit()
    maxHeapSize = '1G'
}

publishing {
    publications.register('mavenJava', MavenPublication) {
        artifact tasks.named("jar")
        artifact tasks.named("jarJar")
        artifact tasks.named("sourcesJar")
    }
    repositories {
        maven {
            url = uri("sftp://teamopenindustry.cc:22/var/www/html/maven/")
            credentials {
                username = "mavenci"
                password = System.getenv("MAVENCI_PASS")
            }
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

tasks.register('showBuildInfo') {
    doLast {
        System.out.println("Build Uploaded to Maven at: ")
        System.out.println("https://teamopenindustry.cc/maven/cam72cam/universalmodcore/UniversalModCore/${version}/UniversalModCore-${version}.jar")
    }
}

publish.finalizedBy showBuildInfo

// IntelliJ no longer downloads javadocs and sources by default, this tells Gradle to force IntelliJ to do it.
idea.module { downloadJavadoc = downloadSources = true }

eclipse {
    // Eclipse no longer downloads javadocs and sources by default, this tells Gradle to force Eclipse to do it.
    classpath { downloadJavadoc = downloadSources = true }

    // NOTE: ForgeGradle 7 does not yet support Eclipse run configurations
    // Run everytime eclipse builds the code
    //autoBuildTasks genEclipseRuns
    // Run when importing the project
    //synchronizationTasks 'genEclipseRuns'
}

// NOTE: Merging of source sets is now controlled by the property 'net.minecraftforge.gradle.merge-source-sets'
